allow user to chose to go down a patch of random riddles

--- a/views/landing.erb
+++ b/views/landing.erb
@@ -2,4 +2,5 @@
 
 <p>To enter, you must answer a set of riddles correctly.</p>
 
-<a href="/riddles">Proceed</a>
+<a href="/riddles">Standard riddles</a>
+<a href="/random_riddles">Random riddles</a>
