--- a/views/input.erb
+++ b/views/input.erb
@@ -1,4 +1,4 @@
-<form class="" action="/riddles" method="post">
+<form class="" action="<%= @action %>" method="post">
   <div class="form-group">
     <label for="answer"><%= @riddle.details[:q] %></label>
     <input id="answer" name="answer" class="form-control" type="text">
